ci: add PR check workflow with validate script

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "echo 'no tests yet'",
     "lint": "eslint .",
     "build": "tsc -p tsconfig.build.json",
-    "test:int": "BREK_CONFIG_DIR=integration-tests/config BREK_WRITE_DIR=integration-tests/config BREK_LOADERS_FILE_PATH=integration-tests/brek.loaders.js kizu 'integration-tests/**/*.spec.ts'"
+    "test:int": "BREK_CONFIG_DIR=integration-tests/config BREK_WRITE_DIR=integration-tests/config BREK_LOADERS_FILE_PATH=integration-tests/brek.loaders.js kizu 'integration-tests/**/*.spec.ts'",
+    "validate": "npm run build && npm run lint && npm test"
   },
   "homepage": "https://github.com/mhweiner/brek-loader-aws-secrets-manager",
   "keywords": [
