fix: add --fix to lint script

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "prepare": "npm run build",
     "test": "echo 'no tests yet'",
-    "lint": "eslint .",
+    "lint": "eslint . --fix",
     "build": "tsc -p tsconfig.build.json",
     "test:int": "BREK_CONFIG_DIR=integration-tests/config BREK_WRITE_DIR=integration-tests/config BREK_LOADERS_FILE_PATH=integration-tests/brek.loaders.js kizu 'integration-tests/**/*.spec.ts'",
     "validate": "npm run build && npm run lint && npm test"
