ci: Node 22, OIDC release workflow (no NPM_TOKEN)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,11 +4,14 @@ on:
     branches:
       - main
       - next
+permissions:
+  id-token: write   # Required for npm trusted publishing (OIDC)
+  contents: read
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    concurrency: 
+    concurrency:
       group: deploy-${{github.ref}}
       cancel-in-progress: true
     steps:
@@ -18,8 +21,8 @@ jobs:
           fetch-tags: true
       - uses: actions/setup-node@v4
         with:
-          node-version: latest
-          registry-url: "https://registry.npmjs.org"
+          node-version: '22'
+          registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
       - run: npm ci
       - run: npm run build
@@ -29,4 +32,3 @@ jobs:
       - run: npx autorel --publish
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
