fix: add integration-tests and include test:int in validate
- Add minimal integration-tests/ so test:int does not fail (scandir ENOENT)
- Add test:int to validate so PR CI runs it and catches missing dir
- One loader spec that asserts awsSecret is callable (no AWS call)

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint . --fix",
     "build": "tsc -p tsconfig.build.json",
     "test:int": "BREK_CONFIG_DIR=integration-tests/config BREK_WRITE_DIR=integration-tests/config BREK_LOADERS_FILE_PATH=integration-tests/brek.loaders.js kizu 'integration-tests/**/*.spec.ts'",
-    "validate": "npm run build && npm run lint && npm test"
+    "validate": "npm run build && npm run lint && npm test && npm run test:int"
   },
   "homepage": "https://github.com/mhweiner/brek-loader-aws-secrets-manager",
   "keywords": [
